--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: IKIM web site
+description: Institute for AI in medicine; University Hospital; University of Duisburg-Essen; Germany
