--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-cayman
+theme: minima
 title: IKIM web site
-description: Institute for AI in medicine; University Hospital; University of Duisburg-Essen; Germany
+description: Institute for AI in medicine; University Hospital Essen; University of Duisburg-Essen; Germany
