move style defs to central location + publication filter by name

--- a/_data/groups.yml
+++ b/_data/groups.yml
@@ -7,7 +7,7 @@
     zip: 45131
     city: Essen
 
-- name: dso
+- name: mcmi
   label: Multimodal Computing & Machine Intelligence
   address:
     name: Girardethaus
