--- a/_data/people/mcmi.yml
+++ b/_data/people/mcmi.yml
@@ -33,3 +33,11 @@
   title: M.Sc.
   roles: ['phd']
   interests: ['Explainable AI', 'Multimodal Deep Learning', 'Clinical Decision Making (breast cancer diagnosis)'] 
+  
+- name: Paul Youssef
+  mail: paul.youssef@uni-due.de
+  title: M.Sc.
+  roles: ['phd']
+  interests: ['Clinical Decision Making', 'Natural Language Processing']
+  
+  
