--- a/_data/people/kei.yml
+++ b/_data/people/kei.yml
@@ -3,9 +3,11 @@
   mail: joerg.schloetterer@uni-due.de
   roles: ['head']
   interests: ['Multimodal & Representation Learning', 'Knowledge Extraction', 'Natural Language Processing', 'Information Retrieval']
+  img: joerg-schloetterer.jpeg
 
 - name: Van Bach Nguyen
   mail: vanbach.nguyen@uni-due.de
   title: M.Sc.
   roles: ['phd']
   interests: ['Natural Language Processing', 'Explainable AI', 'Conversational Agents']
+  img: van-bach-nguyen.jpeg
