--- a/_data/people/mcmi.yml
+++ b/_data/people/mcmi.yml
@@ -10,7 +10,7 @@
   mail: andrea.tonk@uk-essen.de
   phone: +4920172377825
   roles: ['admin']
-  img: andrea-tonk.jpeg
+  img: Andrea-Tonk.jpeg
 
 - name: Ryan Aydelott
   mail: ryan.aydelott@uk-essen.de
