--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,7 @@ jobs:
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git checkout gh-pages
+        git fetch
         ls -Q | grep -v _site | xargs rm -rf
         mv _site/* .
         rm -rf _site
