corrected file name

--- a/_data/people/ds.yml
+++ b/_data/people/ds.yml
@@ -3,7 +3,7 @@
   mail: folker.meyer@uni-due.de
   phone:  +4920172377802
   roles: ['head','board']
-  img: folker-meyer.jpg
+  img: meyer-folker.jpg
 
 - name: Kerstin Bornemann
   mail: kerstin.bornemann@uk-essen.de
