--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,9 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: 
+     - ubuntu-latest
+     - self-hosted
     steps:
     - name: Checkout
       uses: actions/checkout@v1
