--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,9 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: 
-     - ubuntu-latest
-     - self-hosted
+    runs-on: self-hosted
     steps:
     - name: Checkout
       uses: actions/checkout@v1
