--- a/_data/people/mcmi.yml
+++ b/_data/people/mcmi.yml
@@ -3,7 +3,7 @@
   mail: christin.seifert@uni-due.de
   phone: +4920172377803
   roles: ['head','board']
-  interests: ['Machine Learning', 'Natural Language Processing', 'Explainable AI', 'Medical Data Science', 'Information Visualization']
+  interests: ['Machine Learning', 'Natural Language Processing', 'Explainable AI', 'Medical Data Science']
   img: seifert-christin.jpeg
 
 - name: Andrea Tonk
