--- a/_data/people/dss.yml
+++ b/_data/people/dss.yml
@@ -3,7 +3,7 @@
   mail: ivana.kraiselburd@uni-due.de
   roles: ['head']
   interests: ['Bacterial Diversity ',  'Sepsis ', ' Machine learning & Prediction ']
-  img: Ivana-Kraiselburd.jpg
+  img: kraiselburd-ivana.jpg
 
 - name: Ann-Kathrin Brüggemann
   mail: Ann-Kathrin.Brueggemann@uk-essen.de
