--- a/_data/people/ds.yml
+++ b/_data/people/ds.yml
@@ -15,7 +15,7 @@
   title: MSc.
   mail: josefa.welling@uk-essen.de
   roles: ['phd']
-  img: welling-josefa,jpg
+  img: welling-josefa.jpg
 
 - name: Jule Golsch
   mail: jule.golsch@uk-essen.de
