--- a/_data/people/ds.yml
+++ b/_data/people/ds.yml
@@ -33,6 +33,12 @@
   title: MSc.
   roles: ['phd']
   img: block-katharina.jpg
+  
+- name: Ann-Kathrin Brüggemann
+  mail: ann-kathrin.brueggemann@uk-essen.de
+  title: MSc.
+  roles: ['phd']
+  img: brueggemann-ann-kathrin.jpg
 
 - name: Hendrik Schmidt
   mail: hendrik.schmidt@uk-essen.de
