--- a/_data/people/dss.yml
+++ b/_data/people/dss.yml
@@ -10,5 +10,5 @@
   title: M.Sc.
   roles: ['phd']
   interests: ['Time Series Data', '16s rDNA' ]
-  img: Brueggemann-Ann-Kathrin.jpg
+  img: brueggemann-ann-kathrin.jpg
 
