--- a/_data/people/ds.yml
+++ b/_data/people/ds.yml
@@ -32,7 +32,7 @@
   mail: katharina.block@uk-essen.de
   title: MSc.
   roles: ['phd']
-  img: block-katharina.jpg
+  img: Katharina-Block.jpg
   
 - name: Hendrik Schmidt
   mail: hendrik.schmidt@uk-essen.de
