added interests for Josefa

--- a/_data/people/ds.yml
+++ b/_data/people/ds.yml
@@ -49,6 +49,7 @@
 
 - name: Josefa Welling
   title: MSc.
+  interests: ['antibiotic resistances', 'ML']
   mail: josefa.welling@uk-essen.de
   roles: ['phd']
   img: welling-josefa.jpg
