--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: minima
 title: IKIM web site
-description: Institute for AI in medicine; University Hospital Essen; University of Duisburg-Essen; Germany
+description: Institute for AI in Medicine / University Hospital Essen / University of Duisburg-Essen / Germany
 baseurl: /ikim-website
 twitter_username: IkimUme
 github_username: IKIM-Essen
