fixed FNs med title, fixed black spaces in about

--- a/_data/people/diair.yml
+++ b/_data/people/diair.yml
@@ -1,5 +1,5 @@
 - name: Felix Nensa
-  title: Prof Dr.
+  title: Prof Dr. med.
   mail: felix.nensa@uk-essen.de
   roles: ['head']
   img: Nensa_Felix.jpeg
