--- a/_data/people/ds.yml
+++ b/_data/people/ds.yml
@@ -12,11 +12,10 @@
   img: kerstin-bornemann.jpeg
 
 - name: Ricarda Schmithausen
-  title: PD Dr.med. Dr. agr. 
+  title: PD Dr. Dr.
   mail: ricarda.schmithausen@uni-due.de
   roles: ['postdoc']
   img: schmithausen-ricarda.jpg
-  interests: ['one health', 'hygiene', 'outbreak epidemiology/surveillance', 'antibiotic resistance dynamics']
 
 - name: Simon Magin
   title: Dr.
