--- a/_data/people/mcmi.yml
+++ b/_data/people/mcmi.yml
@@ -1,6 +1,6 @@
 - name: Christin Seifert
   title: Prof. Dr.
-  mail: christin.seifert@uni-due.de
+  mail: christin.seifert@uni-due.de or christin.seifert@uk-essen.de
   phone: +4920172377803
   roles: ['head','board']
   interests: ['Machine Learning', 'Natural Language Processing', 'Explainable AI', 'Medical Data Science']
@@ -18,13 +18,6 @@
   position-special: Experimental/HPC Systems Specialist 
   img: Ryan-Aydelott.jpg
 
-- name: Sultan Imangaliyev
-  title: Dr.
-  mail: sultan.imangaliyev@uni-due.de
-  roles: ['postdoc']
-  interests: ['deep learning on tabular data', 'explainable AI', 'biomarker selection', 'human microbiome', 'bioinformatics', 'systems biology', 'computational biology']
-  img: Sultan-Imangaliyev.jpg
-
 - name: Meike Nauta
   title: M.Sc.
   mail: meike.nauta@uk-essen.de
@@ -41,13 +34,13 @@
   
 - name: Jan Trienes
   title: M.Sc.
-  mail: jan.trienes@uni-due.de
+  mail: jan.trienes@uni-due.de or jan.trienes@uk-essen.de
   roles: ['phd']
   interests: ['Natural Language Processing', 'Information Retrieval']
   img: Jan-Trienes.jpg
   
 - name: Paul Youssef
-  mail: paul.youssef@uni-due.de
+  mail: paul.youssef@uni-due.de or paul.youssef@uk-essen.de
   title: M.Sc.
   roles: ['phd']
   interests: ['Clinical Decision Making', 'Natural Language Processing']
@@ -55,21 +48,21 @@
   
 - name: Osman Koras
   title: M.Sc.
-  mail: osman.koras@uni-due.de
+  mail: osman.koras@uni-due.de or osmanalperen.koras@uk-essen.de
   roles: ['phd']
   interests: ['Natural Language Processing, Faithfulness in Natural Language Generation, Representation of Text Semantics and Machine Learning']
   img: Osman-Koras.jpg
   
 - name: Phuong Quynh Le
   title: M.Sc.
-  mail: phuongquynh.le@uni-due.de
+  mail: phuongquynh.le@uni-due.de or phuongquynh.le@uk-essen.de
   roles: ['phd']
   interests: ['Explainable AI, Machine Learning']
   img: Phuong-Quynh-Le.jpg
 
 - name: Meijie Li
   title: M.Sc.
-  mail: meijie.li@uni-due.de
+  mail: meijie.li@uni-due.de or meijie.li@uk-essen.de
   roles: ['phd']
   interests: 
   img: Meijie-Li.jpg
