--- a/_data/people/mcmi.yml
+++ b/_data/people/mcmi.yml
@@ -1,6 +1,7 @@
 - name: Christin Seifert
   title: Prof. Dr.
-  mail: christin.seifert@uni-due.de or christin.seifert@uk-essen.de
+  mail: christin.seifert@uni-due.de
+  mail: christin.seifert@uk-essen.de
   phone: +4920172377803
   roles: ['head','board']
   interests: ['Machine Learning', 'Natural Language Processing', 'Explainable AI', 'Medical Data Science']
@@ -34,13 +35,15 @@
   
 - name: Jan Trienes
   title: M.Sc.
-  mail: jan.trienes@uni-due.de or jan.trienes@uk-essen.de
+  mail: jan.trienes@uni-due.de
+  mail: jan.trienes@uk-essen.de
   roles: ['phd']
   interests: ['Natural Language Processing', 'Information Retrieval']
   img: Jan-Trienes.jpg
   
 - name: Paul Youssef
-  mail: paul.youssef@uni-due.de or paul.youssef@uk-essen.de
+  mail: paul.youssef@uni-due.de
+  mail: paul.youssef@uk-essen.de
   title: M.Sc.
   roles: ['phd']
   interests: ['Clinical Decision Making', 'Natural Language Processing']
@@ -48,21 +51,24 @@
   
 - name: Osman Koras
   title: M.Sc.
-  mail: osman.koras@uni-due.de or osmanalperen.koras@uk-essen.de
+  mail: osman.koras@uni-due.de
+  mail: osmanalperen.koras@uk-essen.de
   roles: ['phd']
   interests: ['Natural Language Processing, Faithfulness in Natural Language Generation, Representation of Text Semantics and Machine Learning']
   img: Osman-Koras.jpg
   
 - name: Phuong Quynh Le
   title: M.Sc.
-  mail: phuongquynh.le@uni-due.de or phuongquynh.le@uk-essen.de
+  mail: phuongquynh.le@uni-due.de
+  mail: phuongquynh.le@uk-essen.de
   roles: ['phd']
   interests: ['Explainable AI, Machine Learning']
   img: Phuong-Quynh-Le.jpg
 
 - name: Meijie Li
   title: M.Sc.
-  mail: meijie.li@uni-due.de or meijie.li@uk-essen.de
+  mail: meijie.li@uni-due.de
+  mail: meijie.li@uk-essen.de
   roles: ['phd']
   interests: 
   img: Meijie-Li.jpg
