--- a/_data/people/mcmi.yml
+++ b/_data/people/mcmi.yml
@@ -73,3 +73,44 @@
   interests: 
   img: Meijie-Li.jpg
   
+- name: Celina Bandowski
+  mail: celina.bandowski@uk-essen.de
+  roles: ['shk']
+  interests: 
+  img: 
+  
+- name: Theresa Bernsmann
+  mail: theresa.bernsmann@uk-essen.de
+  roles: ['shk']
+  interests: 
+  img: 
+  
+- name: Monika Coers
+  mail: monika.coers@uk-essen.de
+  roles: ['shk']
+  interests: 
+  img: 
+  
+- name: Bahadir Eryilmaz
+  mail: bahadir.eryilmaz@uk-essen.de
+  roles: ['shk']
+  interests: 
+  img: 
+  
+- name: Hannah Louisa Göke
+  mail: hannahlouisa.goeke@uk-essen.de
+  roles: ['shk']
+  interests: 
+  img: 
+  
+- name: Lisa Meißner
+  mail: lisa.meissner@uk-essen.de
+  roles: ['shk']
+  interests: 
+  img: 
+  
+- name: Justin Roschlak
+  mail: justinjoel.roschlak@uk-essen.de
+  roles: ['shk']
+  interests: 
+  img: 
