--- a/_data/people/mcmi.yml
+++ b/_data/people/mcmi.yml
@@ -48,7 +48,7 @@
   
 - name: Osman Koras
   title: M.Sc.
-  mail: mail: ['osman.koras@uni-due.de','osmanalperen.koras@uk-essen.de']
+  mail: ['osman.koras@uni-due.de','osmanalperen.koras@uk-essen.de']
   roles: ['phd']
   interests: ['Natural Language Processing, Faithfulness in Natural Language Generation, Representation of Text Semantics and Machine Learning']
   img: Osman-Koras.jpg
