--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,34 +10,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@v1
+      uses: actions/checkout@v3
       with:
         ref: main
-    - name: Set up Ruby 2.6
-      uses: actions/setup-ruby@v1
+    - name: Cache
+      uses: actions/cache@v3
       with:
-        ruby-version: 2.6.x
-    - name: Build Jekyll site
-      run: |
-        set -xo pipefail
-        rm -rf _site/*
-        gem install bundler
-        bundle install
-        bundle exec jekyll build
-    - name: Deploy
-      env:
-        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-      run: |
-        set -xo pipefail
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        git checkout gh-pages
-        git fetch
-        ls -Q | grep -v _site | xargs rm -rf
-        mv _site/* .
-        rm -rf _site
-        rm -rf .jekyll-cache
-        [[ -n "$(git status --porcelain)" ]] || exit 0
-        git add .
-        git commit -m "Build $(git rev-parse main | grep -o '^.\{10\}')"
-        git push "https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git" gh-pages
+        path: vendor/bundle
+        key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile') }}
+        restore-keys: ${{ runner.os }}-gems-
+    - name: Build and deploy
+      uses: helaili/jekyll-action@v2
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
