--- a/_data/people/accr.yml
+++ b/_data/people/accr.yml
@@ -4,10 +4,16 @@
   roles: ['head']
   interests: 
   img: florian-rambow.jpg
+  
+- name: Andrea Tonk
+  mail: andrea.tonk@uk-essen.de
+  phone: +4920172377825
+  roles: ['admin']
+  img: Andrea-Tonk.jpg
 
 - name: Samira Makhzami
   title: M.Sc.
-  mail: 
+  mail: samira.rambow-makhzami@uk-essen.de
   roles: ['phd']
   interests:
   img: samira-makhzami.jpg
