Use the pre_build_commands directive
This executes the changes in the container of the jekyll action
directly. The git config of the host OS is not used inside the action.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,12 +19,9 @@ jobs:
         path: vendor/bundle
         key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile') }}
         restore-keys: ${{ runner.os }}-gems-
-    - name: Workaround for build
-      run: |
-        git config --global http.version HTTP/1.1
-        git config --global http.postBuffer 157286400
     - name: Build and deploy
       uses: helaili/jekyll-action@v2
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         commit_author: "github-actions[bot]"
+        pre_build_commands: git config --global http.version HTTP/1.1; git config --global http.postBuffer 157286400; apk fetch git-lfs;
