--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,4 +24,4 @@ jobs:
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         commit_author: "github-actions[bot]"
-        pre_build_commands: git config --global http.version HTTP/1.1; git config --global http.postBuffer 157286400
+        pre_build_commands: git config --global http.version HTTP/1.1; git config --global http.postBuffer 157286400; apk fetch git-lfs;
