--- a/_data/people/accr.yml
+++ b/_data/people/accr.yml
@@ -3,7 +3,7 @@
   mail: florian.rambow@uk-essen.de
   roles: ['head']
   interests: 
-  img: florian-rambow.jpg
+  img: Florian-Rambow.jpg
   
 - name: Andrea Tonk
   mail: andrea.tonk@uk-essen.de
@@ -16,7 +16,7 @@
   mail: samira.rambow-makhzami@uk-essen.de
   roles: ['phd']
   interests:
-  img: samira-makhzami.jpg
+  img: Samira-Makhzami.jpg
   
 - name: Yichao Hua
   title: Dr.
