--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,8 +19,34 @@ jobs:
         path: vendor/bundle
         key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile') }}
         restore-keys: ${{ runner.os }}-gems-
-    - name: Build and deploy
-      uses: helaili/jekyll-action@v2
+    - name: Install ruby and dependencies
+      run: apt-get install -y ruby-full build-essential zlib1g-dev
+    - name: Install bundler
+      run: gem install bundler
+    - name: Install jekyll and the rest of the dependencies
+      run: bundle install
+    - name: Run the jekyll build
+      run: jekyll build
+    - name: Upload the created pages artifact
+      uses: actions/upload-pages-artifact@v1
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        commit_author: "github-actions[bot]"
+        name: "github-pages"
+        path: "_site/"
+        retention_days: "1"
+  
+  publish:
+    runs-on: ubuntu-latest
+    needs: build
+
+    permissions:
+      pages: write
+      id-token: write
+
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
