--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
         key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile') }}
         restore-keys: ${{ runner.os }}-gems-
     - name: Install ruby and dependencies
-      run: apt-get install -y ruby-full build-essential zlib1g-dev
+      run: sudo apt-get install -y ruby-full build-essential zlib1g-dev
     - name: Install bundler
       run: gem install bundler
     - name: Install jekyll and the rest of the dependencies
