--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,8 @@ jobs:
         restore-keys: ${{ runner.os }}-gems-
     - name: Install ruby and dependencies
       run: sudo apt-get install -y ruby-full build-essential zlib1g-dev
+    - name: Create and configure a local gem directory
+      run: mkdir -p $HOME/gems && export GEM_HOME="$HOME/gems" && export PATH="$HOME/gems/bin:$PATH"
     - name: Install bundler
       run: gem install bundler
     - name: Install jekyll and the rest of the dependencies
