--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Create and configure a local gem directory
       run: mkdir -p $HOME/gems && export GEM_HOME="$HOME/gems" && export PATH="$HOME/gems/bin:$PATH"
     - name: Install bundler
-      run: gem install bundler
+      run: sudo gem install bundler
     - name: Install jekyll and the rest of the dependencies
       run: bundle install
     - name: Run the jekyll build
