--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,20 +13,11 @@ jobs:
       uses: actions/checkout@v3
       with:
         ref: main
-    - name: Cache
-      uses: actions/cache@v3
-      with:
-        path: vendor/bundle
-        key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile') }}
-        restore-keys: ${{ runner.os }}-gems-
-    - name: Install ruby and dependencies
-      run: sudo apt-get install -y ruby-full build-essential zlib1g-dev
-    - name: Create and configure a local gem directory
-      run: mkdir -p $HOME/gems && export GEM_HOME="$HOME/gems" && export PATH="$HOME/gems/bin:$PATH"
-    - name: Install bundler
-      run: sudo gem install bundler
-    - name: Install jekyll and the rest of the dependencies
-      run: bundle install
+    - name: Setup ruby
+      uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: "ruby"
+          bundler-cache: true
     - name: Run the jekyll build
       run: jekyll build
     - name: Upload the created pages artifact
