--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,13 +13,8 @@ jobs:
       uses: actions/checkout@v3
       with:
         ref: main
-    - name: Setup ruby
-      uses: ruby/setup-ruby@v1
-      with:
-        ruby-version: "3.2"
-        bundler-cache: true
-    - name: Run the jekyll build
-      run: ./vendor/bundle/ruby/3.2.0/bin/jekyll build
+    - name: Build
+      uses: actions/jekyll-build-pages@v1
     - name: Upload the created pages artifact
       uses: actions/upload-pages-artifact@v1
       with:
