--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
       with:
         ref: main
     - name: Build
-      uses: docker://jekyll/jekyll:stable
+      uses: docker://jekyll/builder:stable
       with:
         entrypoint: bundle && jekyll build
     - name: Upload the created pages artifact
