--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
         ref: main
     - name: Build
       run: |
-        apt update && apt upgrade -y && apt install -y ruby-full build-essential zlib1g-dev && \
+        sudo -i && apt update && apt upgrade -y && apt install -y ruby-full build-essential zlib1g-dev && \
         echo '# Install Ruby Gems to ~/gems' >> ~/.bashrc && echo 'export GEM_HOME="$HOME/gems"' >> ~/.bashrc && \
         echo 'export PATH="$HOME/gems/ && bin:$PATH"' >> ~/.bashrc && source ~/.bashrc && \
         gem install jekyll bundler && cd /srv/jekyll && export LANG=C.UTF-8 && bundle3.0 && jekyll build
