--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,12 +13,13 @@ jobs:
       uses: actions/checkout@v3
       with:
         ref: main
+    - name: Setup ruby
+      uses: actions/setup-ruby@v1
+      with:
+        ruby-version: '3.0'
+        bundler-cache: true
     - name: Build
-      run: |
-        sudo -i && apt update && apt upgrade -y && apt install -y ruby-full build-essential zlib1g-dev && \
-        echo '# Install Ruby Gems to ~/gems' >> ~/.bashrc && echo 'export GEM_HOME="$HOME/gems"' >> ~/.bashrc && \
-        echo 'export PATH="$HOME/gems/ && bin:$PATH"' >> ~/.bashrc && source ~/.bashrc && \
-        gem install jekyll bundler && cd /srv/jekyll && export LANG=C.UTF-8 && bundle3.0 && jekyll build
+      run: jekyll build
     - name: Upload the created pages artifact
       uses: actions/upload-pages-artifact@v1
       with:
