Debug gem search paths

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,10 @@ jobs:
         ruby-version: '3.0'
         bundler-cache: true
     - name: Build
-      run: GEM_HOME=$PWD/vendor/bundle/ruby/3.0.0/gems ./vendor/bundle/ruby/3.0.0/bin/jekyll build
+      run: |
+        export GEM_HOME=$PWD/vendor/bundle/ruby/3.0.0/gems ./vendor/bundle/ruby/3.0.0/bin/jekyll build
+        gem env
+        ./vendor/bundle/ruby/3.0.0/bin/gem env
     - name: Upload the created pages artifact
       uses: actions/upload-pages-artifact@v1
       with:
