--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,9 +20,10 @@ jobs:
         bundler-cache: true
     - name: Build
       run: |
-        export GEM_HOME=$PWD/vendor/bundle/ruby/3.0.0/gems ./vendor/bundle/ruby/3.0.0/bin/jekyll build
+        export GEM_HOME=$PWD/vendor/bundle/ruby/3.0.0/gems 
         gem env
         ./vendor/bundle/ruby/3.0.0/bin/gem env
+        ./vendor/bundle/ruby/3.0.0/bin/jekyll build
     - name: Upload the created pages artifact
       uses: actions/upload-pages-artifact@v1
       with:
