--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ubuntu:latest
-      volumes: $GITHUB_WORKSPACE:/srv/jekyll
+      volumes: 
+        - $GITHUB_WORKSPACE:/srv/jekyll
     steps:
     - name: Checkout
       uses: actions/checkout@v3
