--- a/_data/people/ds.yml
+++ b/_data/people/ds.yml
@@ -33,7 +33,7 @@
   mail: adrian.doerr@uk-essen.de
   title: M.Sc.
   roles: ['phd']
-  img: adrian-doerr.jpg
+  img: doerr-adrian.jpg
 
 - name: Jule Gosch
   mail: jule.gosch@uk-essen.de
