--- a/_data/people/grk.yml
+++ b/_data/people/grk.yml
@@ -2,4 +2,4 @@
   title: Prof. Dr.
   mail: britta.boeckmann@uk-essen.de
   roles: ['head']
-  img: boeckmann-britta.jpeg
+  img: boeckmann-britta.jpg
