--- a/_data/people/bco.yml
+++ b/_data/people/bco.yml
@@ -2,4 +2,4 @@
   title: Prof. Dr.
   mail: johannes-koester@uk-essen.de
   roles: ['head']
-  img: https://koester-johannes.jpg
+  koester-johannes.jpg
