--- a/_data/people/bco.yml
+++ b/_data/people/bco.yml
@@ -1,5 +1,5 @@
 - name: Johannes Köster
   title: Prof. Dr.
-  mail: johannes-koester@uk-essen.de
+  mail: johannes-koester@uni-due.de
   roles: ['head']
   img: koester-johannes.jpg
