--- a/_data/people/accr.yml
+++ b/_data/people/accr.yml
@@ -24,3 +24,10 @@
   roles: ['postdoc']
   interests:
   img: Yichao-Hua_2.jpeg
+
+- name: Peihua Zhao
+  title: Dr.
+  mail: peihua.zhao@uk-essen.de
+  roles: ['postdoc']
+  interests:
+  img: Peihua-Zhao_4-3.jpeg
