--- a/_data/people/ds.yml
+++ b/_data/people/ds.yml
@@ -57,5 +57,5 @@
   interests: ['antibiotic resistances', 'ML']
   mail: josefa.welling@uk-essen.de
   roles: ['phd']
-  img: welling-josefa.jpg
+  img: Welling-Josefa_4-3.jpg
 
