--- a/_data/people/accr.yml
+++ b/_data/people/accr.yml
@@ -31,3 +31,10 @@
   roles: ['postdoc']
   interests:
   img: Peihua-Zhao_4-3.jpg
+
+- name: Lea Otte
+  title: M.Sc.
+  mail: lea.otte@uk-essen.de
+  roles: ['phd']
+  interests:
+  img: Otte-Lea.jpg
