--- a/_data/people/accr.yml
+++ b/_data/people/accr.yml
@@ -14,7 +14,7 @@
 - name: Samira Makhzami
   title: M.Sc.
   mail: samira.rambow-makhzami@uk-essen.de
-  roles:
+  roles: ['labmanager']
   interests:
   img: Samira-Makhzami.jpg
   
