--- a/_data/people/ds.yml
+++ b/_data/people/ds.yml
@@ -69,7 +69,7 @@
 
 - name: Leah Consten
   title: M.Sc.
-  mail: shivohum.nishad@uk-essen.de
+  mail: Leah.Consten@uk-essen.de
   roles: ['tech']
   img: Leah-Consten.jpg
 
