--- a/_data/people/ds.yml
+++ b/_data/people/ds.yml
@@ -65,7 +65,7 @@
   interests: ['antibiotic resistance', 'wastewater analysis']
   mail: shivohum.nishad@uk-essen.de
   roles: ['phd']
-  img: Nishad-Shivohum.jpg
+  img: Nishad-Shivohum.jpeg
 
 - name: Leah Consten
   title: M.Sc.
