--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image: ubuntu:latest
+      image: ubuntu:24.04
     steps:
     - name: Checkout
       uses: actions/checkout@v4
@@ -26,5 +26,5 @@ jobs:
         export LANG=en_US.UTF-8
         export LANGUAGE=en_US:en
         export LC_ALL=en_US.UTF-8
-        bundle3.0
+        bundle3.2
         jekyll build
