--- a/_data/people/dss.yml
+++ b/_data/people/dss.yml
@@ -6,7 +6,7 @@
   img: kraiselburd-ivana.jpg
 
 - name: Ann-Kathrin Dörr
-  mail: Ann-Kathrin.Doerr@uk-essen.de
+  mail: ann-kathrin.doerr@uk-essen.de
   title: M.Sc.
   roles: ['phd']
   interests: ['Time Series Data', '16s rDNA' ]
